# app/server/notyfier_server.go
@@ -2,15 +2,12 @@ package server
 
 import (
 	"context"
-	"fmt"
-	"github.com/ashwanthkumar/slack-go-webhook"
-
-	"github.com/golang/protobuf/ptypes/empty"
-	"github.com/izumin5210/grapi/pkg/grapiserver"
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
-
 	api_pb "emergence/api"
+	createChatsMediator "emergence/commandsAndQueries/CreateChat"
+	deleteChatsMediator "emergence/commandsAndQueries/DeleteChat"
+	"emergence/integration"
+	"github.com/baranius/godiator"
+	"github.com/izumin5210/grapi/pkg/grapiserver"
 )
 
 // NotyfierServiceServer is a composite interface of api_pb.NotyfierServiceServer and grapiserver.Server.
@@ -20,49 +17,48 @@ type NotyfierServiceServer interface {
 }
 
 // NewNotyfierServiceServer creates a new NotyfierServiceServer instance.
-func NewNotyfierServiceServer() NotyfierServiceServer {
-	return &notyfierServiceServerImpl{}
+func NewNotyfierServiceServer(repository integration.IRepository) NotyfierServiceServer {
+	return &notyfierServiceServerImpl{
+		mediator: godiator.GetInstance(),
+		repo:     repository,
+	}
 }
 
 type notyfierServiceServerImpl struct {
+	mediator godiator.IGodiator
+	repo     integration.IRepository
 }
 
-func (s *notyfierServiceServerImpl) ListNotyfiers(ctx context.Context, req *api_pb.ListNotyfiersRequest) (*api_pb.ListNotyfiersResponse, error) {
-	// TODO: Not yet implemented.
-	return nil, status.Error(codes.Unimplemented, "TODO: You should implement it!")
-}
-
-func (s *notyfierServiceServerImpl) GetNotyfier(ctx context.Context, req *api_pb.GetNotyfierRequest) (*api_pb.Notyfier, error) {
-	// TODO: Not yet implemented.
-	return nil, status.Error(codes.Unimplemented, "TODO: You should implement it!")
-}
-
-func (s *notyfierServiceServerImpl) CreateNotyfier(ctx context.Context, req *api_pb.CreateNotyfierRequest) (*api_pb.Notyfier, error) {
-	webhookUrl := "https://hooks.slack.com/services/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"
-
-	attachment1 := slack.Attachment{}
-	attachment1.AddField(slack.Field{Title: "Author", Value: "Чирикова Анастасия"}).AddField(slack.Field{Title: "Status", Value: "Completed"})
-	attachment1.AddAction(slack.Action{Type: "button", Text: "Улететь в Армению 🛫", Url: "https://flights.example.com/book/r123456", Style: "primary"})
-	payload := slack.Payload{
-		Text:        "всем привет, добро пожаловать в Ереван",
-		Username:    "robot",
-		Channel:     "#general",
-		IconEmoji:   ":monkey_face:",
-		Attachments: []slack.Attachment{attachment1},
-	}
-	err := slack.Send(webhookUrl, "", payload)
+func (s *notyfierServiceServerImpl) DeleteChats(ctx context.Context, request *api_pb.DeleteChatsRequest) (*api_pb.DeleteChatsResponse, error) {
+	result, err := s.mediator.Send(&deleteChatsMediator.DeleteChatsCommand{
+		ExternalUserIds: &request.UserIds,
+	})
 	if err != nil {
-		fmt.Printf("error: %s\n", err)
+		return nil, err
 	}
-	return &api_pb.Notyfier{NotyfierId: "mew"}, nil
+	response := result.(*deleteChatsMediator.DeleteChatsResult)
+	return &api_pb.DeleteChatsResponse{
+		DeletedChats: *response.DeletedChatIds,
+	}, nil
 }
 
-func (s *notyfierServiceServerImpl) UpdateNotyfier(ctx context.Context, req *api_pb.UpdateNotyfierRequest) (*api_pb.Notyfier, error) {
-	// TODO: Not yet implemented.
-	return nil, status.Error(codes.Unimplemented, "TODO: You should implement it!")
-}
+func (s *notyfierServiceServerImpl) CreateChats(ctx context.Context, req *api_pb.CreateChatsRequest) (*api_pb.CreateChatsResponse, error) {
 
-func (s *notyfierServiceServerImpl) DeleteNotyfier(ctx context.Context, req *api_pb.DeleteNotyfierRequest) (*empty.Empty, error) {
-	// TODO: Not yet implemented.
-	return nil, status.Error(codes.Unimplemented, "TODO: You should implement it!")
+	//turn int 32 in int for req.ExternalUserIdToInterval and map[string]int32 to map[string]int
+	var externalUserIdToInterval = make(map[string]int)
+	for k, v := range req.ExternalUserIdToInterval {
+		externalUserIdToInterval[k] = int(v)
+	}
+
+	request := &createChatsMediator.CreateChatCommand{ExternalUserIdToInterval: &externalUserIdToInterval}
+
+	result, err := s.mediator.Send(request)
+
+	if err != nil {
+		return nil, err
+	}
+
+	response := result.(*createChatsMediator.CreateChatResult)
+
+	return &api_pb.CreateChatsResponse{ExternalUserIdToChatUrl: *response.ExternalUserIdToChatUrl}, nil
 }
